--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     const appName = 'c:leadCreateFormWrapper';
     const componentName = 'c:leadCreateForm';
-    const lightningEndpoint = 'https://sravyadatlacommunity-developer-edition.na224.force.com/s/';
+    const lightningEndpoint = 'https://sravyadatlacommunity-developer-edition.na224.force.com';
     const componentAttributes = {
 
     };
